fixed page bottom cutting off the see more box issue by adding padding-bottom to the wholeThing div

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -20,6 +20,10 @@
   margin: 20px !important;
 }
 
+.highLowAndFeelsLike{
+  text-align: left;
+}
+
 img{
   height: 200px;
   margin-left: 10px;
@@ -110,6 +114,10 @@ p{
   margin-top: 0;
 }
 
+.wholeThing{
+  padding-bottom: 10px;
+}
+
 
 
 /*  KEYFRAMES  */
@@ -124,7 +132,7 @@ p{
     max-width: 600px;
   }to{
     background: rgba(255, 255, 255, .3);
-    border-radius: 10%;
+    border-radius: 7.5%;
     box-shadow: 2.5px 2.5px rgba(0, 0, 0, .35);
     height: 112.8px;
     max-width: 400px;
@@ -135,7 +143,7 @@ p{
 @keyframes maximizeBox{
   from{
     background: rgba(255, 255, 255, .3);
-    border-radius: 10%;
+    border-radius: 7.5%;
     box-shadow: 2.5px 2.5px rgba(0, 0, 0, .35);
     height: 112.8px;
     margin: 20px !important;
